# FTP_Galaxy2

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  STYLEGUIDE.md  build.py  ftp_galaxy_2.spec  news_digest.bat  news_digest.spec  pyproject.toml  synchron_with_FTP.bat  synchron_with_FTP.spec  Общая схема проекта.docx
.github/workflows/: tests.yml
SRC/DIGEST_APP/: dummies.py  main.py  mypy.ini
SRC/GENERAL/: config.py  config.yaml  config_digest.yaml  get_default_config_path.py  loadconfig.py
SRC/SYNC_APP/: build.py  main.py  mypy.ini
examples/: config_digest.example.yaml  config_sync.example.yaml
src/: news_digest.bat  news_digest.spec  synchron_with_FTP.bat  synchron_with_FTP.spec
src/DIGEST_APP/: main.py  mypy.ini
src/GENERAL/: config.py  config.yaml  config_digest.yaml  config_sync.yaml  errors.py  get_default_config_path.py  loadconfig.py  setup_loguru.py
src/SYNC_APP/: build.py  ftp_galaxy_2.spec  main.py
tests/: conftest.py  utils.py
tests/digest/: test_controller_main_output_report_extra.py  test_digest_config_cli.py  test_digest_const.py  test_digest_dto.py  test_digest_message.py  test_get_context.py  test_get_description_service.py  test_make_grouped_descriptions.py  test_output_report.py  test_parser_mvp.py
tests/e2e/: test_sync_main_e2e.py
tests/general/: test_general_errors.py  test_general_setup_loguru.py  test_loadconfig_include.py
tests/sync/: test_controller.py  test_diff_planner_mvp.py  test_sync_config_cli.py  test_sync_config_cli_module.py  test_sync_dto.py  test_sync_executiongate.py  test_sync_ftp.py  (+8 more)
(+62 files in other folders)
